# zeek-log-schema

./: Dockerfile  README.md  pyproject.toml
app/: app.py
src/zeek_log_schema/: __init__.py  avro.py  models.py  util.py  zeek.py
src/zeek_log_schema/tests/: test_if_stmt.py  test_log_stream_creation.py  test_record_decl.py  test_redef_amp_log.py
src/zeek_log_schema/tests/res/: 00_log_stream.zeek  01_record_decl.zeek  02_test_record_redef.zeek  03_if_stmt.zeek  04_redef_amp_log.zeek
src/zeek_log_schema/tests/zkg/: test_packages.py
src/zeek_log_schema/zkg/: __init__.py  packages.py
