[project]
name = "zeek-log-schema"
version = "0.1.0"
description = "Zeek log schema generator using static analysis of ZeekScript source code. Batteries included, with Streamlit app to compare two Zeek versions and highlight changes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.48.0",
    "zeekscript>=1.3.2",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
